--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,18 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Segoe UI', sans-serif
 }
 
 body {
     padding: 20px;
 }
 
-header {
+.header {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.13);
     margin-bottom: 20px;
 }
+
+
