--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    padding: 20px;
+    padding: 20px 300px;
 }
 
 .header {
@@ -15,4 +15,8 @@ body {
     margin-bottom: 20px;
 }
 
-
+@media (max-width: 700px) {
+    body {
+        padding: 20px;
+    }
+}
