--- a/styles/style.css
+++ b/styles/style.css
@@ -15,8 +15,18 @@ body {
     margin-bottom: 20px;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 1000px) {
     body {
         padding: 20px;
     }
 }
+
+.transaction-item {
+    display: flex;
+    justify-content: space-between;
+    padding: 8px;
+    border-bottom: 1px solid #ccc5c5;
+}
+
+
+
